--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,5 @@ org.gradle.parallel=true
 
 # Mod Properties
 mod_version = 1.0.5
-maven_group = com.github.zarzelcow
+maven_group = com.github.Better-than-Adventure
 archives_base_name = legacy-lwjgl3-bta
